--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,5 @@
 <body>
-<a href="/hello">/hello</a>
-<a href="/world">/world</a>
+<h1>Index</h1>
+<a href="/cypress-testing/hello">/hello</a>
+<a href="/cypress-testing/world">/world</a>
 </body>
